# openni2-astra-pro-driver

./: .gitignore  CLAUDE.md  CMakeLists.txt  test_driver.cpp  test_firmware_cmd.cpp
docs/: depth-format-firmware-quirk.md  official-driver-s2d-formula.md  s2d-calibration.md
examples/: ab_test.sh  dump_compare.c  dump_frame.c  hello_astra.c  ir_control.c  s2d_fit.py  test_depth_console.c  test_depth_dump.c  test_depth_ir_viewer.c  test_depth_viewer.c  test_fixed_params.c  test_gtk_viewer.c  test_ir_viewer.c  test_pixel_dump.c  test_s2d_table.c  test_shift_hist.c
include/openni2/driver/: OniDriverAPI.h  OniDriverTypes.h
src/: AstraDebug.h  AstraDepthStream.cpp  AstraDepthStream.h  AstraDevice.cpp  AstraDevice.h  AstraDriver.cpp  AstraDriver.h  AstraIRStream.cpp  AstraIRStream.h  DepthProcessor.cpp  DepthProcessor.h  FirmwareCmd.cpp  FirmwareCmd.h  FrameProcessor.cpp  FrameProcessor.h  IrProcessor.cpp  IrProcessor.h  PacketParser.cpp  PacketParser.h  SoftFilter.cpp  SoftFilter.h  UsbDevice.cpp  UsbDevice.h
tests/: test_softfilter.cpp
tools/: s2d_calibrate.cpp
